# iranipy

./: .gitignore  README.md  ipynb_docs_renderer.py
.github/workflows/: ipynb_docs_renderer.yml
docs/: index.html  ipynb_docs_renderer_part_1-checkpoint.html  ipynb_docs_renderer_part_1.html  ipynb_docs_renderer_part_2.html  poetry_part_1.html
projects/ddos/: README.md
projects/ddos/script/: ddos.py
projects/ipynb_docs_renderer/: README.md  ipynb_docs_renderer_part_1.ipynb  ipynb_docs_renderer_part_2.ipynb
projects/ipynb_docs_renderer/github-action/: ipynb_docs_renderer.yml
projects/ipynb_docs_renderer/script/: ipynb_docs_renderer.py
projects/moviepy/: README.md
projects/moviepy/audio_video/: pyproject.toml
projects/moviepy/audio_video/audio_video/: main.py  sample.py
projects/poetry/: README.md  poetry_part_1.ipynb
projects/poetry/poetry_demo/: pyproject.toml
projects/poetry/poetry_demo/poetry_demo/: main.py
projects/qrcode/: README.md
projects/qrcode/opencv_qrcode/: pyproject.toml
projects/qrcode/opencv_qrcode/opencv_qrcode/: main.py  sample.py
projects/tcp_chat/: README.md
projects/tcp_chat/scripts/: client.py  server.py
