[tool.poetry]
name = "poetry_demo"
version = "0.1.0"
description = ""
authors = ["iranipy <info@iranipy.ir>"]

[tool.poetry.dependencies]
python = "^3.8"
pendulum = "^2.1.2"

[tool.poetry.scripts]
main = 'poetry_demo.main:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
