[tool.poetry]
name = "opencv_qrcode"
version = "0.1.0"
description = ""
authors = ["iranipy <info@iranipy.ir>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
opencv-python = "^4.5.4"
qrcode = "^7.3.1"
numpy = "^1.21.4"
Pillow = "^8.4.0"

[tool.poetry.scripts]
sample = "opencv_qrcode.sample:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
